--- a/code/python/django/dingodjango/templates/posts/multiple.html
+++ b/code/python/django/dingodjango/templates/posts/multiple.html
@@ -1,6 +1,6 @@
 {% extends 'index.html' %}
 {% block title %}
-  {{ settings.title }}: {{ settings.subtitle }}{% endif %}
+  {{ settings.title }}: {{ settings.subtitle }}
 {% endblock %}
 
 {% block content %}
