Admin interface now has tagging in new post, tags work, and there is a tag url view.

--- a/code/python/django/dingodjango/media/default.css
+++ b/code/python/django/dingodjango/media/default.css
@@ -119,6 +119,8 @@ h5 { padding-bottom: 4px; }
 }
 .content a:hover {color: #CCC;}
 .content .descr {
+  clear: left;
+  float: right;
   margin-bottom: 5px;
   text-align: right;
 }
