--- a/code/python/django/dingodjango/templates/authors/author_sidebar.html
+++ b/code/python/django/dingodjango/templates/authors/author_sidebar.html
@@ -1,5 +1,11 @@
+{% if authors %}
+<ul>
 {% for author in authors %}
   <li><a href="{% url authors.views.bio author.user.username %}">
     {{ author.full_name }}
   </a></li>
 {% endfor %}
+</ul>
+{% else %}
+<p>No Authors Found.</p>
+{% endif %}
