Yet more modifications.  Basically, it works.

--- a/code/ruby/bearify/layout/default.haml
+++ b/code/ruby/bearify/layout/default.haml
@@ -4,4 +4,7 @@
     %title Bearify
     %link{ :rel => "stylesheet", :type => "text/css", :href => "css/main"}
   %body
-    = @content
+    %h1 
+      %a{:href => '/'} Bearify
+    %div#content
+      = @content
