--- a/code/ruby/bearify/view/css/main.sass
+++ b/code/ruby/bearify/view/css/main.sass
@@ -2,9 +2,12 @@
 !normal = #00f
 
 body
+  background-color: #99f
+  background-image: url('/bearify.png')
+  background-repeat: no-repeat
+  background-position: top right
   font:
     family: sans-serif monospace
-    size: 11px
   margin: 1em
   padding: 0
 
@@ -13,3 +16,13 @@ body
       color= !normal
       &:hover
         color= !hover
+
+pre
+  background-color: #eef
+  border: 1px solid #999
+  padding: 3px
+
+h1
+  a
+    color: black
+    text-decoration: none
