--- a/school/605.441.Databases/project/style_red.css
+++ b/school/605.441.Databases/project/style_red.css
@@ -226,6 +226,7 @@ position: relative;
 {
 font-size: 2.1em;
 padding-bottom: 0.1em;
+padding-top: 0.5em;
 margin-bottom: 0.8em;
 }
 
@@ -233,7 +234,7 @@ margin-bottom: 0.8em;
 {
 font-size: 1.2em;
 padding-bottom: 0.175em;
-margin-bottom: 1.4em;
+margin-bottom: 0.6em;
 margin-top: 0.95em;
 }
 
