--- a/school/605.441.Databases/project/style.css
+++ b/school/605.441.Databases/project/style.css
@@ -82,9 +82,14 @@ div.prediction span.date {
 }
 
 div.prediction span.user {
-  background: #CCE;
+  background: #EDD;
   padding: 3px;
   margin: 0;
-  background: #EDD;
   margin-right: 10px;
+}
+
+div.prediction span.ticker {
+  background: #CEC;
+  padding: 3px;
+  margin: 0;
 }
